<resources>
    <string name="upload_success">Upload completed successfully in [[ELAPSED_TIME]]</string>
    <string name="upload_error">Data logger error while uploading</string>
    <string name="upload_notification_second_text">Data logger upload at [[UPLOAD_RATE]] - [[PROGRESS]]</string>
    <string name="app_name">DataLogger</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_stats">Labels time summary</string>
    <string name="toolbar_base_title">Data logger</string>
    <string name="urlConnectionCharsetName">UTF-8</string>
    <string-array name="ui_errors_messages_snackbar_list">
        <item>External storage not available</item>
        <item>Required sensors are disabled</item>
        <item>Internet not available</item>
        <item>File upload error</item>
        <item>No unsynchronised files</item>
        <item>Error starting collectors</item>
    </string-array>
    <string name="ui_bluetooth_header_text">Bluetooth network</string>
    <string name="ui_bluetooth_status_main_text">State is</string>
    <string name="ui_bluetooth_status_slaves_torso_text">Torso</string>
    <string name="ui_bluetooth_status_slaves_hips_text">Hips</string>
    <string name="ui_bluetooth_status_slaves_bag_text">Bag</string>
    <string name="ui_bluetooth_button_text_enable">Enable</string>
    <string name="ui_bluetooth_button_text_connect">Connect</string>
    <string name="ui_bluetooth_button_text_pair">Pair</string>
    <string name="ui_dialog_bluetooth_title_paired_devices">Paired Devices</string>
    <string name="ui_dialog_bluetooth_title_other_devices">Other Available Devices</string>
    <string name="ui_dialog_bluetooth_button_scan">Scan for devices</string>
    <string name="pref_sensors_title_remoteSync">Enable remote server sync</string>
    <string name="pref_sensors_category_cells">Cellular network recorder</string>
    <string name="pref_sensors_key_enabled_cells">PREF_SENSORS_ENABLED_CELL_KEY</string>
    <string name="pref_sensors_title_cells">Enable cells recorder</string>
    <string name="pref_sensors_title_cells_samplingPeriod">Sampling rate in Hz (1 for default)</string>
    <string name="pref_sensors_key_samplingPeriod_cells">PREF_SENSORS_SAMPLING_CELL_KEY</string>
    <string name="pref_sensors_key_sync_cells">PREF_SENSORS_SYNC_CELL_KEY</string>
    <string name="pref_sensors_category_WiFi">WiFi recorder</string>
    <string name="pref_sensors_key_enabled_WiFi">PREF_SENSORS_ENABLED_WIFI_KEY</string>
    <string name="pref_sensors_title_WiFi">Enable WiFi recorder</string>
    <string name="pref_sensors_title_WiFi_samplingPeriod">Sampling rate in Hz (1 for default)</string>
    <string name="pref_sensors_key_samplingPeriod_WiFi">PREF_SENSORS_SAMPLING_WIFI_KEY</string>
    <string name="pref_sensors_key_sync_WiFi">PREF_SENSORS_SYNC_WIFI_KEY</string>
    <string name="pref_sensors_category_Bluetooth">Bluetooth recorder</string>
    <string name="pref_sensors_key_enabled_Bluetooth">PREF_SENSORS_ENABLED_Bluetooth_KEY</string>
    <string name="pref_sensors_title_Bluetooth">Enable Bluetooth recorder</string>
    <string name="pref_sensors_title_Bluetooth_samplingPeriod">Sampling rate in Hz (1 for default)</string>
    <string name="pref_sensors_key_samplingPeriod_Bluetooth">PREF_SENSORS_SAMPLING_Bluetooth_KEY</string>
    <string name="pref_sensors_key_sync_Bluetooth">PREF_SENSORS_SYNC_Bluetooth_KEY</string>
    <string name="pref_sensors_category_accelerometer">Accelerometer</string>
    <string name="pref_sensors_key_enabled_accelerometer">PREF_SENSORS_ENABLED_ACC_KEY</string>
    <string name="pref_sensors_title_accelerometer">Enable accelerometer</string>
    <string name="pref_sensors_title_accelerometer_samplingPeriod">Sampling rate</string>
    <string name="pref_sensors_key_samplingPeriod_accelerometer">PREF_SENSORS_SAMPLING_ACC_KEY</string>
    <string name="pref_sensors_key_sync_accelerometer">PREF_SENSORS_SYNC_ACC_KEY</string>
    <string name="pref_sensors_category_gyroscope">Gyroscope</string>
    <string name="pref_sensors_key_enabled_gyroscope">PREF_SENSORS_ENABLED_GYR_KEY</string>
    <string name="pref_sensors_title_gyroscope">Enable gyroscope</string>
    <string name="pref_sensors_title_gyroscope_samplingPeriod">Sampling rate</string>
    <string name="pref_sensors_key_samplingPeriod_gyroscope">PREF_SENSORS_SAMPLING_GYR_KEY</string>
    <string name="pref_sensors_key_sync_gyroscope">PREF_SENSORS_SYNC_GYR_KEY</string>
    <string name="pref_sensors_category_magnetometer">Magnetometer</string>
    <string name="pref_sensors_key_enabled_magnetometer">PREF_SENSORS_ENABLED_MAG_KEY</string>
    <string name="pref_sensors_title_magnetometer">Enable magnetometer</string>
    <string name="pref_sensors_title_magnetometer_samplingPeriod">Sampling rate</string>
    <string name="pref_sensors_key_samplingPeriod_magnetometer">PREF_SENSORS_SAMPLING_MAG_KEY</string>
    <string name="pref_sensors_key_sync_magnetometer">PREF_SENSORS_SYNC_MAG_KEY</string>
    <string name="pref_sensors_category_microphone">Audio recorder</string>
    <string name="pref_sensors_key_enabled_microphone">PREF_SENSORS_ENABLED_MIC_KEY</string>
    <string name="pref_sensors_title_microphone">Enable audio recorder</string>
    <string name="pref_sensors_title_microphone_samplingPeriod">Sampling rate in Hz (0 for default)</string>
    <string name="pref_sensors_key_samplingPeriod_microphone">PREF_SENSORS_SAMPLING_MIC_KEY</string>
    <string name="pref_sensors_key_sync_microphone">PREF_SENSORS_SYNC_MIC_KEY</string>
    <string name="pref_sensors_category_battery">Battery recorder</string>
    <string name="pref_sensors_key_enabled_battery">PREF_SENSORS_ENABLED_BAT_KEY</string>
    <string name="pref_sensors_title_battery">Enable battery recorder</string>
    <string name="pref_sensors_key_sync_battery">PREF_SENSORS_SYNC_BAT_KEY</string>
    <string name="pref_sensors_category_depr_cells">Cellular network recorder (deprecated)</string>
    <string name="pref_sensors_key_enabled_depr_cells">PREF_SENSORS_ENABLED_DEPR_CELL_KEY</string>
    <string name="pref_sensors_title_depr_cells">Enable cells recorder</string>
    <string name="pref_sensors_key_sync_depr_cells">PREF_SENSORS_SYNC_DEPR_CELL_KEY</string>
    <string name="pref_sensors_category_location">Location recorder</string>
    <string name="pref_sensors_key_enabled_location">PREF_SENSORS_ENABLED_LOC_KEY</string>
    <string name="pref_sensors_title_location">Enable location recorder</string>
    <string name="pref_sensors_key_sync_location">PREF_SENSORS_SYNC_LOC_KEY</string>
    <string name="pref_sensors_category_satellite">Satellites recorder</string>
    <string name="pref_sensors_key_enabled_satellite">PREF_SENSORS_ENABLED_SAT_KEY</string>
    <string name="pref_sensors_title_satellite">Enable satellites recorder</string>
    <string name="pref_sensors_key_sync_satellite">PREF_SENSORS_SYNC_SAT_KEY</string>
    <string name="pref_sensors_category_temperature">Temperature sensor</string>
    <string name="pref_sensors_key_enabled_temperature">PREF_SENSORS_ENABLED_TEMP_KEY</string>
    <string name="pref_sensors_title_temperature">Enable temperature sensor</string>
    <string name="pref_sensors_title_temperature_samplingPeriod">Sampling rate</string>
    <string name="pref_sensors_key_samplingPeriod_temperature">PREF_SENSORS_SAMPLING_TEMP_KEY</string>
    <string name="pref_sensors_key_sync_temperature">PREF_SENSORS_SYNC_TEMP_KEY</string>
    <string name="pref_sensors_category_light">Light sensor</string>
    <string name="pref_sensors_key_enabled_light">PREF_SENSORS_ENABLED_LIG_KEY</string>
    <string name="pref_sensors_title_light">Enable light sensor</string>
    <string name="pref_sensors_title_light_samplingPeriod">Sampling rate</string>
    <string name="pref_sensors_key_samplingPeriod_light">PREF_SENSORS_SAMPLING_LIG_KEY</string>
    <string name="pref_sensors_key_sync_light">PREF_SENSORS_SYNC_LIG_KEY</string>
    <string name="pref_sensors_category_pressure">Pressure sensor</string>
    <string name="pref_sensors_key_enabled_pressure">PREF_SENSORS_ENABLED_PRES_KEY</string>
    <string name="pref_sensors_title_pressure">Enable pressure sensor</string>
    <string name="pref_sensors_title_pressure_samplingPeriod">Sampling rate</string>
    <string name="pref_sensors_key_samplingPeriod_pressure">PREF_SENSORS_SAMPLING_PRES_KEY</string>
    <string name="pref_sensors_key_sync_pressure">PREF_SENSORS_SYNC_PRES_KEY</string>
    <string name="pref_sensors_category_humidity">Humidity sensor</string>
    <string name="pref_sensors_key_enabled_humidity">PREF_SENSORS_ENABLED_HUM_KEY</string>
    <string name="pref_sensors_title_humidity">Enable humidity sensor</string>
    <string name="pref_sensors_title_humidity_samplingPeriod">Sampling rate</string>
    <string name="pref_sensors_key_samplingPeriod_humidity">PREF_SENSORS_SAMPLING_HUM_KEY</string>
    <string name="pref_sensors_key_sync_humidity">PREF_SENSORS_SYNC_HUM_KEY</string>
    <string name="pref_sensors_category_orientation">Orientation</string>
    <string name="pref_sensors_key_enabled_orientation">PREF_SENSORS_ENABLED_ORIEN_KEY</string>
    <string name="pref_sensors_title_orientation">Enable orientation</string>
    <string name="pref_sensors_title_orientation_samplingPeriod">Sampling rate</string>
    <string name="pref_sensors_key_samplingPeriod_orientation">PREF_SENSORS_SAMPLING_ORIEN_KEY</string>
    <string name="pref_sensors_key_sync_orientation">PREF_SENSORS_SYNC_ORIEN_KEY</string>
    <string name="pref_sensors_category_lin_acceleration">Linear Acceleration</string>
    <string name="pref_sensors_key_enabled_lin_acceleration">PREF_SENSORS_ENABLED_LIN_ACC_KEY</string>
    <string name="pref_sensors_title_lin_acceleration">Enable linear acceleration</string>
    <string name="pref_sensors_key_samplingPeriod_lin_acceleration">PREF_SENSORS_SAMPLING_LIN_ACC_KEY</string>
    <string name="pref_sensors_key_sync_lin_acceleration">PREF_SENSORS_SYNC_LIN_ACC_KEY</string>
    <string name="pref_sensors_category_gravity">Gravity</string>
    <string name="pref_sensors_key_enabled_gravity">PREF_SENSORS_ENABLED_GRA_KEY</string>
    <string name="pref_sensors_title_gravity">Enable gravity</string>
    <string name="pref_sensors_title_gravity_samplingPeriod">Sampling rate</string>
    <string name="pref_sensors_key_samplingPeriod_gravity">PREF_SENSORS_SAMPLING_GRA_KEY</string>
    <string name="pref_sensors_key_sync_gravity">PREF_SENSORS_SYNC_GRA_KEY</string>
    <string name="pref_sync_category_remote_server">Remote server</string>
    <string name="pref_sync_title_server_address">Server address</string>
    <string name="pref_sync_default_server_address">"http://141.100.70.109/upload.php"</string>
    <string name="pref_sync_key_server_address">PREF_GENERAL_SERVER_ADDRS_KEY</string>
    <string name="pref_sync_title_server_syncMode">Files sync</string>
    <string name="pref_sync_key_server_syncMode">PREF_GENERAL_SERVER_SYNCM_KEY</string>
    <string name="pref_sync_category_bluetooth_network">Bluetooth network</string>
    <string name="pref_sync_title_slave_timeout">Slave connection timeout in millis</string>
    <string name="pref_sync_key_slave_timeout">PREF_SYNC_SLAVE_TIMEOUT_KEY</string>
    <string name="pref_sync_default_slave_timeout">15000</string>
    <string name="pref_sync_key_enabled_keepalive">PREF_SYNC_ENABLED_KA_KEY</string>
    <string name="pref_sync_title_keepalive">Enable keepalive</string>
    <string name="pref_sync_title_master_keepalive">Master keepalive interval in millis</string>
    <string name="pref_sync_default_master_keepalive">12000</string>
    <string name="pref_sync_key_master_keepalive">PREF_SYNC_MASTER_KA_KEY</string>
    <string name="pref_sync_title_slave_keepalive">Slave keepalive interval in millis</string>
    <string name="pref_sync_default_slave_keepalive">25000</string>
    <string name="pref_sync_key_slave_keepalive">PREF_SYNC_SLAVE_KA_KEY</string>
</resources>