<!--
  ~ Copyright (c) 2017. Mathias Ciliberto, Francisco Javier Ordoñez Morales,
  ~ Hristijan Gjoreski, Daniel Roggen, Clara Wurm
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of
  ~ this software and associated documentation files (the "Software"), to deal in
  ~ the Software without restriction, including without limitation the rights to use,
  ~ copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the
  ~ Software, and to permit persons to whom the Software is furnished to do so,
  ~ subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
  ~ FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
  ~ COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
  ~ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_sync_category_remote_server" >

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_general_list_syncModes"
            android:entryValues="@array/pref_general_list_syncModes_values"
            android:key="@string/pref_sync_key_server_syncMode"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_sync_title_server_syncMode" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_sync_default_server_address"
            android:inputType="textCapWords"
            android:key="@string/pref_sync_key_server_address"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_sync_title_server_address" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_sync_category_bluetooth_network" >

        <EditTextPreference
            android:defaultValue="@string/pref_sync_default_slave_timeout"
            android:inputType="number"
            android:singleLine="true"
            android:key="@string/pref_sync_key_slave_timeout"
            android:maxLines="1"
            android:maxLength="5"
            android:title="@string/pref_sync_title_slave_timeout" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_sync_key_enabled_keepalive"
            android:title="@string/pref_sync_title_keepalive" />

        <EditTextPreference
            android:dependency="@string/pref_sync_key_enabled_keepalive"
            android:capitalize="words"
            android:defaultValue="@string/pref_sync_default_master_keepalive"
            android:inputType="number"
            android:singleLine="true"
            android:key="@string/pref_sync_key_master_keepalive"
            android:maxLines="1"
            android:maxLength="5"
            android:title="@string/pref_sync_title_master_keepalive" />

        <EditTextPreference
            android:dependency="@string/pref_sync_key_enabled_keepalive"
            android:capitalize="words"
            android:defaultValue="@string/pref_sync_default_slave_keepalive"
            android:inputType="number"
            android:singleLine="true"
            android:key="@string/pref_sync_key_slave_keepalive"
            android:maxLines="1"
            android:maxLength="5"
            android:title="@string/pref_sync_title_slave_keepalive" />

    </PreferenceCategory>

</PreferenceScreen>
